--- a/index.html
+++ b/index.html
@@ -7,8 +7,38 @@
     <link href="./css/index.css" rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>HELLO WORLD</h1>
+    <nav>
+        <ul>
+            <li>HOME</li>
+            <li>ABOUT</li>
+            <li>CONTACT</li>
+            <li>PROFILE</li>
+        </ul>
+    </nav>
+
+    <main>
+        <div class="summary">
+            <div class="wrapper">
+                <div class="main-text">
+                    <h4>Project Overview</h4>
+                    <p>Online learning with us does not interfere with your daily life. because learning can be done anytime and anywhere. Online learning with us does not interfere with your daily life. because learning can be done anytime and anywhere. Online learning with us does not interfere with your daily life. because learning can be done anytime and anywhere. </p>
+                </div>
+
+                <div class="extra">
+                    <span>Interior Design  - Furniture</span>
+                    <span>July 22 - 2022</span>
+                </div>
+            </div>
+
+            <div class="overview">
+                <h4>Project Overview</h4>
+                <p>Online learning with us does not interfere with your daily life. because learning can be done anytime and anywhere. Online learning with us does not interfere with your daily life. because learning can be done anytime and anywhere.</p>
+                <p>Online learning with us does not interfere with your daily life. because learning can be done anytime and anywhere. Online learning with us does not interfere with your daily life. because learning can be done anytime and anywhere. </p>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
 
